k8s-manifests/mtls-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: petclinic
spec:
  mtls:
    mode: STRICT  # Bắt buộc mTLS cho tất cả traffic
