k8s-manifests/customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  namespace: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      serviceAccountName: customers-service
      containers:
      - name: customers-service
        image: springcommunity/spring-petclinic-customers-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: petclinic
spec:
  selector:
    app: customers-service
  ports:
  - port: 8080
    targetPort: 8080
