k8s-manifests/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      serviceAccountName: vets-service
      containers:
      - name: vets-service
        image: springcommunity/spring-petclinic-vets-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: petclinic
spec:
  selector:
    app: vets-service
  ports:
  - port: 8080
    targetPort: 8080
