k8s-manifests/visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      serviceAccountName: visits-service
      containers:
      - name: visits-service
        image: springcommunity/spring-petclinic-visits-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: petclinic
spec:
  selector:
    app: visits-service
  ports:
  - port: 8080
    targetPort: 8080
