k8s-manifests/mtls-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: petclinic
spec:
  host: "*.petclinic.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
